Upgraded tailwind and using gulp now

--- a/src/splash-screen.html
+++ b/src/splash-screen.html
@@ -343,6 +343,7 @@
         }
       }
     </style>
+    <link rel="stylesheet" href="assets/css/tailwind.css" />
   </head>
 
   <body style="padding: 20px; padding-top: 25px; background: #e9e9e9">
@@ -368,6 +369,8 @@
       </div>
       <div class="spoke"></div>
     </div>
-    <p>Please wait while we load your application</p>
+    <p class="font-inter text-red-600">
+      Please wait while we load your application
+    </p>
   </body>
 </html>
