--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="favicon.ico" />
     <title>
-      FAIRshare - Make your Research data, and beyond, Findable, Accessible,
-      Interoperable, and Reusable (FAIR)
+      FAIRshare - Make your Research data, and beyond, Findable, Accessible, Interoperable, and
+      Reusable (FAIR)
     </title>
   </head>
   <body>
     <noscript>
       <strong>
-        We're sorry but FAIRshare doesn't work properly without JavaScript
-        enabled. Please enable it to continue.
+        We're sorry but FAIRshare doesn't work properly without JavaScript enabled. Please enable it
+        to continue.
       </strong>
     </noscript>
     <div id="app"></div>
