Update lottie borders.

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="favicon.ico" />
     <title>
-      FAIRshare - Make your Research data, and beyond, Findable, Accessible, Interoperable, and
-      Reusable (FAIR)
+      FAIRshare - Make your biomedical research data, and beyond, Findable, Accessible,
+      Interoperable, and Reusable (FAIR)
     </title>
   </head>
   <body>
