fix for mac splash screen

--- a/public/splash-screen.html
+++ b/public/splash-screen.html
@@ -4,7 +4,9 @@
   </head>
 
   <body style="padding: 20px; padding-top: 25px; background: transparent">
-    <div style="display: flex; justify-content: center; align-items: center">
+    <div
+      style="display: flex; justify-content: center; align-items: center; background: transparent"
+    >
       <lottie-player
         src="https://assets5.lottiefiles.com/packages/lf20_69bpyfie.json"
         background="transparent"
