--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="favicon.ico" />
     <title>
-      FAIRshare - Make your biomedical research data, and beyond, Findable, Accessible,
+      FAIRshare - Make your biomedical research data and software Findable, Accessible,
       Interoperable, and Reusable (FAIR)
     </title>
   </head>
