refactor: ♻️ update resource integrity

--- a/public/splash-screen.html
+++ b/public/splash-screen.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>FAIRshare</title>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script
+      src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"
+      integrity="sha384-kKY2i/YghyyToHFUl3/rW3jCVqfYKpSzyK4laHouY2/9ehIdHOgyHacS5UomjVrr"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body style="padding: 20px; padding-top: 25px; background: transparent">
